--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.covidAPP">
-        <activity android:name=".Register_Business"></activity>
+        <activity android:name=".activities.Register_Business"></activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.covidAPP.NoActionBar">
             <intent-filter>
@@ -24,15 +24,15 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".LoginActivity"
+            android:name=".activities.LoginActivity"
             android:label="@string/app_name"
             android:windowSoftInputMode="adjustResize|stateVisible"></activity>
         <activity
-            android:name=".LogActivity"
+            android:name=".activities.LogActivity"
             android:label="@string/app_name"
             android:windowSoftInputMode="adjustResize|stateVisible"></activity>
         <activity
-            android:name=".Register_Activity"
+            android:name=".activities.Register_Activity"
             android:label="@string/app_name"
             android:windowSoftInputMode="adjustResize|stateVisible"></activity>
     </application>
